--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <p>Terima kasih telah berkunjung. Kami mohon maaf karena halaman yang Anda kunjungi sedang dalam perawatan. Tabik.</p>
         </div>
         <div class="col-md-12 col-sm-12 text-center footer">
-          <a target="_blank" href="http://dev.blankonlinux.or.id"><img src="img/web.png"></a>
-          <a target="_blank" href="https://t.me/BlankOnLinux"><img src="img/telegram.png"></a>
-          <a target="_blank" href="https://web.facebook.com/groups/blankonlinux/"><img src="img/facebook.png"></a>
-          <a target="_blank" href="https://twitter.com/BlankOnLinux"><img src="img/twitter.png"></a>
+          <a target="_blank" href="http://klim.or.id"><img src="img/web.png"></a>
+          <a target="_blank" href="https://t.me/linuxmalang"><img src="img/telegram.png"></a>
+          <a target="_blank" href="https://www.facebook.com/linuxmalangraya/"><img src="img/facebook.png"></a>
+          <a target="_blank" href="https://twitter.com/linuxmalangraya"><img src="img/twitter.png"></a>
         </div>
       </div>
     </div>
