--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a target="_blank" href="https://www.facebook.com/linuxmalangraya/"><img src="img/facebook.png"></a>
           <a target="_blank" href="https://twitter.com/linuxmalangraya"><img src="img/twitter.png"></a>
         </div>
+        <div class="col-md-12 col-sm-12 text-center footer">
+          Hosted & Sponsored by <a href="http://www.cloudkilat.com">www.CloudKilat.com</a>
+        </div>
       </div>
     </div>
   </body>
